--- a/src/FubuMVC.Core/FubuMVC.Core.csproj
+++ b/src/FubuMVC.Core/FubuMVC.Core.csproj
@@ -10,6 +10,9 @@
     <PackageIconUrl>https://fubumvc.github.io/content/images/logo.jpg</PackageIconUrl>
     <PackageProjectUrl>http://fubumvc.github.io/</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/DarthFubuMVC/fubumvc/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <Version>3.2.4</Version>
+    <AssemblyVersion>3.2.4.0</AssemblyVersion>
+    <FileVersion>3.2.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
