--- a/src/FubuMVC.LightningQueues/FubuMVC.LightningQueues.csproj
+++ b/src/FubuMVC.LightningQueues/FubuMVC.LightningQueues.csproj
@@ -7,6 +7,9 @@
     <AssemblyName>FubuMVC.LightningQueues</AssemblyName>
     <PackageId>FubuMVC.LightningQueues</PackageId>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+    <AssemblyVersion>3.2.4.0</AssemblyVersion>
+    <Version>3.2.4</Version>
+    <FileVersion>3.2.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LightningQueues" Version="0.3.0" />
-    <PackageReference Include="LightningQueues.Storage.LMDB" Version="0.3.0" />
+    <PackageReference Include="LightningQueues" Version="0.4.0" />
+    <PackageReference Include="LightningQueues.Storage.LMDB" Version="0.4.0" />
   </ItemGroup>
 
 </Project>
